archive/old-cluster-configs/cluster-b/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nf-b
  namespace: nf-b-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nf-b
  template:
    metadata:
      labels:
        app: nf-b
    spec:
      containers:
        - name: veramo-nf-b
          image: veramo-nf:phase7
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: veramo-nf-b
  namespace: nf-b-namespace
spec:
  selector:
    app: nf-b
  ports:
    - port: 3001
      targetPort: 3001
      name: http
